updates bg images, fixes font styles to increase readability

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -61,6 +61,14 @@ a:focus {
     font-weight: 400;
 }
 
+.drop-shadow {
+    text-shadow: black 0.1em 0.1em 0.2em;
+}
+
+.unshadowed {
+    text-shadow: none;
+}
+
 .navbar-custom {
     margin-bottom: 0;
     border-bottom: 1px solid rgba(255,255,255,.3);
@@ -93,7 +101,7 @@ a:focus {
 }
 
 .navbar-custom .nav li.active {
-    outline: nonte;
+    outline: none;
     background-color: rgba(255,255,255,.3);
 }
 
@@ -138,6 +146,7 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
+    text-shadow: black 0.1em 0.1em 0.2em;
     background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
     background-color: #000;
     -webkit-background-size: cover;
@@ -214,7 +223,7 @@ a:focus {
     -moz-animation-timing-function: linear;
 }
 
-@-webkit-keyframes pulse {    
+@-webkit-keyframes pulse {
     0 {
         -webkit-transform: scale(1);
         transform: scale(1);
@@ -231,7 +240,7 @@ a:focus {
     }
 }
 
-@-moz-keyframes pulse {    
+@-moz-keyframes pulse {
     0 {
         -moz-transform: scale(1);
         transform: scale(1);
@@ -252,11 +261,11 @@ a:focus {
     padding-top: 100px;
 }
 
-.download-section {
+.projects-section {
     width: 100%;
     padding: 50px 0;
     color: #fff;
-    background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
+    background: url(../img/projects-bg.jpg) no-repeat center center scroll;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -275,7 +284,7 @@ a:focus {
         padding-top: 250px;
     }
 
-    .download-section {
+    .projects-section {
         padding: 100px 0;
     }
 
